# compression-project

./: .gitignore  README.md  cleanup.sh
.github/workflows/: benchmarks.yml  docker.yml
benchmarks/: benchmark.sh  docker_benchmarks.sh  local_benchmarks.sh
core/: Cargo.toml  Dockerfile
core/src/: lib.rs  main.rs
docs/: algorithms.md  benchmarks.md
js-compressor/: Dockerfile  index.js  package-lock.json  package.json
js-compressor/js-binding/: Cargo.toml  package.json
js-compressor/js-binding/src/: binding.js  cli.js  lib.rs
js-compressor/js-binding/src/__tests__/: compression.test.js
